@@ -1,3 +1,8 @@
+2021/07/28 Visenri
+
+    * support/regression/compact-results.py
+      Fix parsing of test name.
+      
 2021/07/27 Visenri
 
     * src/pdk/gen.c
